--- a/src/style/Nav.css
+++ b/src/style/Nav.css
@@ -53,6 +53,9 @@ nav {
     padding: 0.4rem 1rem 0.4rem 1rem;
     font-weight: bold;
     font-size: 1.2rem;
+}
+
+#menu li {
     color: #eeeeee;
 }
 
